src/main/java/com/example/postBlog/error/EntityDoesNotExistException.java
package com.example.postBlog.error;

public class EntityDoesNotExistException extends RuntimeException {
    
}
